scripts to test on vm